--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,23 +2,39 @@
     <app-navbar></app-navbar>
     <div class="flex flex-col items-center gap-4">
         <span><img class="h-44" src="../../assets/campaign-logo.png" alt=""></span>
-        <span class="font-medium text-7xl"><h1 class="font-bebas">23899 +</h1></span>
-        <span class="font-bold tracking-widest text-xl"><h1 class="font- text-[#6A6969]">THOUSAND HAPPY FACES</h1></span>
+        <span class="font-medium text-7xl">
+            <h1 class="font-bebas">23899 +</h1>
+        </span>
+        <span class="font-bold tracking-widest text-xl">
+            <h1 class="font- text-[#6A6969]">THOUSAND HAPPY FACES</h1>
+        </span>
         <div class="flex gap-8">
-            <button class="py-2 px-4 text-white font-semibold bg-blue-500 rounded-full flex items-center gap-2">groups <span class="mt-1">
-                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7.26867 13.5369L13.5371 7.26844L7.26867 1" stroke="white" stroke-width="1.1875" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M1.00022 7.26843H13.5371" stroke="white" stroke-width="1.1875" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-            </span></button>
-            <button class="py-2 px-4 text-white font-semibold bg-blue-500 rounded-full flex items-center gap-2">individual <span class="mt-1">
-                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7.26867 13.5369L13.5371 7.26844L7.26867 1" stroke="white" stroke-width="1.1875" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M1.00022 7.26843H13.5371" stroke="white" stroke-width="1.1875" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-            </span></button>
+            <a routerLink="/result">
+                <button
+                    class="py-2 px-4 text-white font-semibold bg-blue-500 rounded-full flex items-center gap-2">groups
+                    <span class="mt-1">
+                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7.26867 13.5369L13.5371 7.26844L7.26867 1" stroke="white" stroke-width="1.1875"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M1.00022 7.26843H13.5371" stroke="white" stroke-width="1.1875"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </span></button>
+            </a>
+            <a routerLink="/result-group">
+                <button
+                    class="py-2 px-4 text-white font-semibold bg-blue-500 rounded-full flex items-center gap-2">individual
+                    <span class="mt-1">
+                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7.26867 13.5369L13.5371 7.26844L7.26867 1" stroke="white" stroke-width="1.1875"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M1.00022 7.26843H13.5371" stroke="white" stroke-width="1.1875"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </span></button>
+            </a>
         </div>
-        <div class="flex snap-x">
+        <div class="flex snap-x mt-6">
             <img class="w-80 snap-center swiper-slide " src="../../assets/images/Rectangle1.png" alt="">
             <img class="w-80 snap-center swiper-slide" src="../../assets/images/Rectangle 2.png" alt="">
             <img class="w-80 snap-center swiper-slide" src="../../assets/images/Rectangle3.png" alt="">
