--- a/src/app/result-group/result-group.component.html
+++ b/src/app/result-group/result-group.component.html
@@ -1,3 +1,376 @@
-<div>
+<div class="h-screen">
     <app-navbar></app-navbar>
+    <div class="flex flex-col gap-10 items-center px-20 relative">
+        <h1 class="font-bold text-3xl">GROUP</h1>
+        <div class="py-2 mx-10 shadow-full rounded-lg flex gap-10 w-full justify-evenly sticky top-0 bg-white z-40">
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+                <img class="h-28 w-28" src="../../assets/silver.png" alt="">
+            </div>
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+                <img class="h-28 w-28" src="../../assets/gold.png" alt="">
+            </div>
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+                <img class="h-28 w-28" src="../../assets/platinum.png" alt="">
+            </div>
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+                <img class="h-28 w-28" src="../../assets/diamond.png" alt="">
+            </div>
+        </div>
+
+        <!-- silver -->
+        <div class="flex flex-col gap-8 mt-4  w-full items-center">
+            <h2 class="text-2xl font-bold">SILVER CLUB</h2>
+            <table class="table-fixed w-full">
+                <thead class="sticky top-[158px]">
+                    <tr class="bg-black text-white h-14 text-xl font-semibold text-left ">
+                        <th>Rank</th>
+                        <th>Name</th>
+                        <th>Class</th>
+                        <th>Smiles</th>
+                    </tr>
+                </thead>
+                <tbody class="overflow-y-auto">
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- gold -->
+        <div class="flex flex-col gap-8 mt-4  w-full items-center">
+            <h2 class="text-2xl font-bold">GOLD CLUB</h2>
+            <table class="table-fixed w-full">
+                <thead class="sticky top-[158px]">
+                    <tr class="bg-black text-white h-14 text-xl font-semibold text-left ">
+                        <th>Rank</th>
+                        <th>Name</th>
+                        <th>Class</th>
+                        <th>Smiles</th>
+                    </tr>
+                </thead>
+                <tbody class="overflow-y-auto">
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- platinum -->
+        <div class="flex flex-col gap-8 mt-4  w-full items-center">
+            <h2 class="text-2xl font-bold">PLATINUM CLUB</h2>
+            <table class="table-fixed w-full">
+                <thead class="sticky top-[158px]">
+                    <tr class="bg-black text-white h-14 text-xl font-semibold text-left ">
+                        <th>Rank</th>
+                        <th>Name</th>
+                        <th>Class</th>
+                        <th>Smiles</th>
+                    </tr>
+                </thead>
+                <tbody class="overflow-y-auto">
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- diamond -->
+        <div class="flex flex-col gap-8 mt-4  w-full items-center">
+            <h2 class="text-2xl font-bold">DIAMOND CLUB</h2>
+            <table class="table-fixed w-full">
+                <thead class="sticky top-[158px]">
+                    <tr class="bg-black text-white h-14 text-xl font-semibold text-left ">
+                        <th>Rank</th>
+                        <th>Name</th>
+                        <th>Class</th>
+                        <th>Smiles</th>
+                    </tr>
+                </thead>
+                <tbody class="overflow-y-auto">
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                    <tr class="bg-gray-200 text-black h-14 font-semibold text-xl">
+                        <td>1</td>
+                        <td>arun</td>
+                        <td>bca</td>
+                        <td>100</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
