--- a/src/app/result-group/result-group.component.html
+++ b/src/app/result-group/result-group.component.html
@@ -3,16 +3,16 @@
     <div class="flex flex-col gap-10 items-center px-20 relative">
         <h1 class="font-bold text-3xl">GROUP</h1>
         <div class="py-2 mx-10 shadow-full rounded-lg flex gap-10 w-full justify-evenly sticky top-0 bg-white z-40">
-            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-black to-gray-50 cursor-pointer ">
                 <img class="h-28 w-28" src="../../assets/silver.png" alt="">
             </div>
-            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-black to-gray-50 cursor-pointer ">
                 <img class="h-28 w-28" src="../../assets/gold.png" alt="">
             </div>
-            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-black to-gray-50 cursor-pointer ">
                 <img class="h-28 w-28" src="../../assets/platinum.png" alt="">
             </div>
-            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-blue-500 to-blue-50 cursor-pointer ">
+            <div class="h-36 w-36 flex items-center justify-center rounded-xl active:bg-gradient-to-t from-black to-gray-50 cursor-pointer ">
                 <img class="h-28 w-28" src="../../assets/diamond.png" alt="">
             </div>
         </div>
