--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,14 @@
 .font-bebas{
     font-family: 'Bebas Neue', cursive;
 }
+.swiper-slide {
+    display: flex;
+    align-items: center;
+    width: 280px;
+    height: 295px;
+    filter: blur(2px) ;
+  }
+  .swiper-slide-active{
+   filter: blur(0px) ;
+  }
+  
