--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,10 +34,19 @@
                     </span></button>
             </a>
         </div>
-        <div class="flex snap-x mt-6">
-            <img class="w-80 snap-center swiper-slide " src="../../assets/images/Rectangle1.png" alt="">
-            <img class="w-80 snap-center swiper-slide" src="../../assets/images/Rectangle 2.png" alt="">
-            <img class="w-80 snap-center swiper-slide" src="../../assets/images/Rectangle3.png" alt="">
-        </div>
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="../../assets/images/Rectangle1.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="../../assets/images/Rectangle 2.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="../../assets/images/Rectangle3.png" alt="">
+              </div>
+            </div>
+          </div>
+          
     </div>
 </div>
