--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+.swiper-3d .swiper-slide-shadow-left,.swiper-3d .swiper-slide-shadow-right {
+    background-image: none;
+}
     
