home almost complete

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
 <div class="flex justify-between items-center pr-10 pl-4 pt-2">
-    <span><img class="h-24" src="../../assets/logo-nilgiri.png" alt=""></span>
-    <span><img class="h-16" src="../../assets/hc.png" alt=""></span>
+    <span><a routerLink="/"><img class="h-24" src="../../assets/logo-nilgiri.png" alt=""></a></span>
+    <span><a routerLink="/"><img class="h-16" src="../../assets/hc.png" alt=""></a></span>
 </div>
