--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,23 @@
 <div class="h-screen bg-white ">
     <app-navbar></app-navbar>
-    <div class="flex flex-col items-center gap-4">
-        <span><img class="h-44" src="../../assets/campaign-logo.png" alt=""></span>
-        <span class="font-medium text-7xl">
-            <h1 class="font-bebas">23899 +</h1>
-        </span>
-        <span class="font-bold tracking-widest text-xl">
+    <div class="flex flex-col items-center gap-6">
+        <span><img class="h-40" src="../../assets/campaign-logo.png" alt=""></span>
+        <div class="rolls relative text-6xl flex gap-2 ml-2 font-medium font-bebas items-center">
+            <span>2</span>
+            <span>3</span>
+            <span>8</span>
+            <span>9</span>
+            <span>9</span>
+           <span>+</span>
+        </div>
+        <span class="font-bold tracking-widest text-lg">
             <h1 class="font- text-[#6A6969]">THOUSAND HAPPY FACES</h1>
         </span>
         <div class="flex gap-8">
             <a routerLink="/result-group">
                 <button
-                    class="py-2 px-4 text-white font-semibold bg-blue-500 rounded-full flex items-center gap-2">groups
-                    <span class="mt-1">
+                    class="pt-2 pb-2 px-8 text-white font-semibold text-lg bg-blue-500 rounded-full flex items-center gap-2"><p class="mb-1">groups</p>
+                    <span class="">
                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7.26867 13.5369L13.5371 7.26844L7.26867 1" stroke="white" stroke-width="1.1875"
                                 stroke-linecap="round" stroke-linejoin="round" />
@@ -23,7 +28,7 @@
             </a>
             <a routerLink="/result">
                 <button
-                    class="py-2 px-4 text-white font-semibold bg-blue-500 rounded-full flex items-center gap-2">individual
+                    class="py-2.5 px-4 text-white font-semibold text-lg bg-blue-500 rounded-full flex items-center gap-2">individual
                     <span class="mt-1">
                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7.26867 13.5369L13.5371 7.26844L7.26867 1" stroke="white" stroke-width="1.1875"
