--- a/src/app/result-group/result-group.component.html
+++ b/src/app/result-group/result-group.component.html
@@ -2,7 +2,7 @@
     <app-navbar></app-navbar>
     <div class="flex flex-col gap-10 items-center px-20 relative">
         <h1 class="font-bold text-3xl">GROUP</h1>
-        <div class="py-2 mx-10 shadow-full rounded-lg flex gap-10 w-full justify-evenly sticky top-0 bg-white z-40">
+        <div class="py-2 mx-10 shadow-full rounded-lg flex gap-10 w-full justify-evenly sticky top-0 bg-black z-40">
             <div (click)="isActive = 'silver'" [ngClass]="{'bg-gradient-to-t': (isActive ==='silver')}" class="h-36 w-36 flex items-center justify-center rounded-xl  from-black to-gray-50 cursor-pointer ">
                 <img class="h-28 w-28" src="../../assets/silver.png" alt="">
             </div>
