--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,3 +12,71 @@
    filter: blur(0px) ;
   }
   
+
+  
+ .rolls span {
+    display:inline-block;
+    color:#000000;
+ }
+ 
+ 
+ 
+ 
+ .rolls span:nth-child(1) {
+   animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) both,
+              flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 2s forwards,
+              drop 4s 4s forwards;
+ }
+ 
+ .rolls span:nth-child(2) {
+   animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) .2s both,
+              flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 2.2s forwards,
+              drop 4s 4.2s forwards;
+ }
+ 
+ .rolls span:nth-child(3) {
+   animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) .4s both,
+              flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 2.4s forwards,
+              drop 4s 4.4s forwards;
+ }
+ 
+ .rolls span:nth-child(4) {
+   animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) .6s both,
+              flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 2.6s forwards,
+              drop 4s 4.6s forwards;
+ }
+ 
+ .rolls span:nth-child(5) {
+     animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) .8s both,
+                flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 2.8s forwards,
+                drop 4s 4.8s forwards;
+  }
+ 
+  .rolls span:nth-child(6) {
+     animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) 1s both,
+                flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 3s forwards,
+                drop 4s 5s forwards;
+ }
+ 
+ .rolls span:nth-child(7) {
+     animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) 1.2s both,
+                flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 3.2s forwards,
+                drop 4s 5.2s forwards;
+ }
+ 
+ .rolls span:nth-child(8) {
+     animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) 1.4s both,
+                flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 3.4s forwards,
+                drop 4s 5.4s forwards;
+ }
+ 
+ .rolls span:nth-child(9) {
+     animation: flipUp 1s cubic-bezier(0.6, -10, 0.25, 1.55) 1.6s both,
+                flipDown .5s cubic-bezier(0.45, 0.03, 0.51, 0.95) 3.6s forwards,
+                drop 4s 5.6s forwards;
+ }
+ 
+ @keyframes flipUp {
+   from {transform: rotateX(90deg);}
+   to {transform: rotateX(0deg);}
+ }
