--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,8 +4,7 @@
 .swiper-slide {
     display: flex;
     align-items: center;
-    width: 280px;
-    height: 225px;
+    justify-content: center;
     filter: blur(2px) ;
   }
   .swiper-slide-active{
