--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center pr-10 pl-4 pt-2">
-    <span><a routerLink="/"><img class="h-24" src="../../assets/logo-nilgiri.png" alt=""></a></span>
-    <span><a routerLink="/"><img class="h-16" src="../../assets/hc.png" alt=""></a></span>
+<div class="flex justify-between items-center md:pr-10 pr-4 md:pl-4 pt-2">
+    <span><a routerLink="/"><img class="h-16 md:h-24" src="../../assets/logo-nilgiri.png" alt=""></a></span>
+    <span><a routerLink="/"><img class="h-12 md:h-16" src="../../assets/hc.png" alt=""></a></span>
 </div>
