happy svg added

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,7 +10,11 @@
   .swiper-slide-active{
    filter: blur(0px) ;
   }
-  
+  .backgroungImg{
+    background-image: url("../../assets/happy.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 
   
  .rolls span {
