--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="h-screen bg-white overflow-y-hidden">
+<div class="h-[100svh] bg-white overflow-y-hidden">
     <app-navbar></app-navbar>
-    <div class="flex flex-col items-center gap-6 mt-6 md:mt-0">
+    <div class="flex flex-col items-center mt-6 md:mt-0 md:backgroungImg">
         <span><img class="md:h-40 h-24" src="../../assets/campaign-logo.png" alt=""></span>
-        <div class="rolls relative md:text-6xl text-3xl flex gap-1 md:gap-2 ml-2 font-medium font-bebas items-center">
+        <div class="rolls relative md:text-6xl text-3xl flex gap-1 md:gap-2 ml-2 font-medium font-bebas items-center mt-8">
             <span>2</span>
             <span>3</span>
             <span>8</span>
@@ -13,7 +13,7 @@
         <span class="font-bold tracking-widest text-sm md:text-lg">
             <h1 class="font- text-[#6A6969]">THOUSAND HAPPY FACES</h1>
         </span>
-        <div class="flex gap-3 md:gap-8">
+        <div class="flex gap-3 md:gap-8 mt-8">
             <a routerLink="/result-group">
                 <button
                     class="pt-2 pb-2 px-8 text-white font-semibold text-sm md:text-lg bg-blue-500 rounded-full flex items-center gap-2"><p class="md:mb-1">GROUP</p>
@@ -39,7 +39,7 @@
                     </span></button>
             </a>
         </div>
-        <div class="swiper mySwiper w-full">
+        <div class="swiper mySwiper w-full mt-8">
             <div class="swiper-wrapper">
               <div class="swiper-slide h-[195px] w-[250px] md:h-[225px] md:w-[280px]">
                 <img class="" src="../../assets/images/Rectangle1.png" alt="">
