--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,7 @@
 .swiper-3d .swiper-slide-shadow-left,.swiper-3d .swiper-slide-shadow-right {
     background-image: none;
 }
+.font-poppins{
+    font-family: 'Poppins', sans-serif;
+}
     
