--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="h-[100svh] bg-white overflow-y-hidden">
     <app-navbar></app-navbar>
-    <div class="flex flex-col items-center mt-6 md:mt-0 md:backgroungImg">
+    <div class="flex flex-col items-center mt-6 md:mt-0 backgroungImg">
         <span><img class="md:h-40 h-24" src="../../assets/campaign-logo.png" alt=""></span>
         <div class="rolls relative md:text-6xl text-3xl flex gap-1 md:gap-2 ml-2 font-medium font-bebas items-center mt-8">
             <span *ngIf="totalArray.length === 0">Loading</span>
