--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -8,7 +8,7 @@
                 <path d="M20.5019 12H3.67188" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
         </a>
-        <h1 class="font-bold md:text-3xl text-xl justify-self-center">GROUP</h1>
+        <h1 class="font-bold md:text-3xl text-xl justify-self-center">INDIVIDUAL</h1>
         <div class="invisible">hello</div>
     </div>
     <div class=" mx-10 shadow-full rounded-lg grid grid-cols-4 md:gap- w-full justify-evenly sticky top-0 bg-white z-40  ">
