--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,6 +27,18 @@
             </a>
             <a routerLink="/result">
                 <button
+                    class="py-2 px-4 text-white font-semibold text-sm md:text-lg bg-blue-500 rounded-full flex items-center gap-2">DONATE
+                    <span class="mt-1">
+                        <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7.26867 13.5369L13.5371 7.26844L7.26867 1" stroke="white" stroke-width="1.1875"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M1.00022 7.26843H13.5371" stroke="white" stroke-width="1.1875"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </span></button>
+            </a>
+            <a routerLink="/result">
+                <button
                     class="py-2 px-4 text-white font-semibold text-sm md:text-lg bg-blue-500 rounded-full flex items-center gap-2">INDIVIDUAL
                     <span class="mt-1">
                         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -51,6 +63,5 @@
               </div>
             </div>
           </div>
-          
+
     </div>
-    
